[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UserInterface/TilePointer.escn" type="PackedScene" id=1]
[ext_resource path="res://src/UserInterface/tile_pointer.gd" type="Script" id=3]
[ext_resource path="res://Assets/UserInterface/Sprites/Pointer_Dagger.png" type="Texture" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.226889, 0.292901, 0.223136 )

[sub_resource type="Animation" id=2]
resource_name = "pointer_idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite3D:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Vector3( 0, 2, 0 ), Vector3( 0, 2.25, 0 ) ]
}

[sub_resource type="SpatialMaterial" id=3]
render_priority = 10
flags_no_depth_test = true
params_billboard_mode = 2
params_grow = true
params_grow_amount = -0.005
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98

[node name="TilePointer" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Pointer" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0225654, 0 )
cast_shadow = 0

[node name="Area" type="Area" parent="." index="1"]
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.252482, 0 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/pointer_idle = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
visible = false
material_override = SubResource( 3 )
cast_shadow = 0
texture = ExtResource( 4 )

[connection signal="area_shape_entered" from="Area" to="." method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="Area" to="." method="_on_area_shape_exited"]
